Fix: Add --force flag to Brakeman scan for non-Rails app

--- a/.github/workflows/security_scan.yml
+++ b/.github/workflows/security_scan.yml
@@ -24,4 +24,4 @@ jobs:
         ruby-version: '3.4'
         bundler-cache: true
     - name: Run Brakeman security scan
-      run: bundle exec brakeman -q -w1 
+      run: bundle exec brakeman -q -w1 --force 
