--- a/.github/workflows/security_scan.yml
+++ b/.github/workflows/security_scan.yml
@@ -1,4 +1,4 @@
-name: Security Scan and Audit # 워크플로우 이름 변경: 두 가지 기능을 포함함을 명시
+name: Security Scan and Audit
 
 on:
   push:
@@ -8,34 +8,36 @@ on:
   pull_request:
     branches:
       - master
- 
-
 jobs:
-  security_checks: 
-    name: Run Security Scans (Brakeman & Bundle Audit) 
-
+  security:
+    name: Run Security Scans (Ruby ${{ matrix.ruby_version }})
     runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false 
+      matrix:
+        ruby_version: ["2.7", "3.3", "3.4"] 
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Ruby
+    - name: Set up Ruby ${{ matrix.ruby_version }}
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.4'
+        ruby-version: ${{ matrix.ruby_version }} 
         bundler-cache: true
 
-    # brakeman
-    - name: Add Brakeman Gem to Gemfile (for CI environment) 
+    # Brakeman 
+    - name: Add Brakeman Gem to Gemfile (for CI environment)
       run: echo 'gem "brakeman"' >> Gemfile && bundle install
 
     - name: Run Brakeman security scan
-      run: bundle exec brakeman -q -w1 --force 
-    - name: Install Bundler-audit Gem 
-      
-    # bundler-audit
+      run: bundle exec brakeman -q -w1 --force
+
+    # Bundler-audit
+    - name: Install Bundler-audit Gem
       run: gem install bundler-audit
 
-    - name: Run Bundler-audit Check 
+    - name: Run Bundler-audit Check
       run: bundle audit check --update
