--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node_version }}
-          # cache: "yarn"
+          cache: "yarn"
       - name: Install Dependencies
         run: yarn install
       - name: Run tests and build frontend
