--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Continuous Integration
 
 on:
   push:
-    branches: [master]
+    branches: [master, docker-dev] 
   pull_request:
-    branches: [master]
+    branches: [master, docekr-dev] 
 
 jobs:
   ruby:
@@ -43,7 +43,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
       - name: "Set up Node ${{ matrix.node_version }}"
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node_version }}
           cache: "yarn"
